# stock_crawling

./: .gitignore  README.md  pyproject.toml
app/: main.py
