[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ksm4850 <ksm4850@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
selenium = "^4.23.1"
lxml = "^5.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
